added rest services

--- a/src/DryEraseWebsite/DryEraseWeb/views/help.html
+++ b/src/DryEraseWebsite/DryEraseWeb/views/help.html
@@ -2,7 +2,7 @@
     <div class="fm-panel">
         <h4>Help</h4>
         <div>
-            <a href="mailto:info@dryeraseweb.com">Please email us for any assistance.</a>
+            Tweet us for any assistance: <a href="http://www.twitter.com/DryEraseWeb">@DryEraseWeb</a>
         </div>
     </div>
 </div>
