--- a/src/DryEraseWebsite/DryEraseWeb/plugin/views/main.html
+++ b/src/DryEraseWebsite/DryEraseWeb/plugin/views/main.html
@@ -1,25 +1,36 @@
-﻿<div class="plugWrap">
+﻿<div id="plugWrap" >
+    <h4>Share With</h4>
     <div class="tagWrap">
+
+        <input type="checkbox" disabled="disabled" align="middle"> Your Company (Coming Soon)</input><br/>
+        <input type="checkbox" disabled="disabled"> Your Team (Coming Soon)</input>
+    </div>
+    <h4>Tags</h4>
+    <div class="tagWrap">
+        
+        <form class="tagform" action="" method="get" accept-charset="utf-8">
+            <input type="text" placeholder="add tag" ng-model="tag">
+            <input type="button" ng-click="addTag()" value="Add" class="btn btn-small">
+        </form>
         <span ng-repeat="tag in tags">
-            <a href="#" >{{tag.Text}}</a>&nbsp;
+            <a href="#">{{tag.Text}}</a>&nbsp;
         </span>
     </div>
-    <form class="tagform" action="" method="get" accept-charset="utf-8">
-        <input type="text"  placeholder="add tag" ng-model="tag">
-        <input type="button" ng-click="addTag()" value="Add">
-    </form>
-    <div id="cmntWrap">
-        <ul >
-            <li class="cf" ng-repeat="comment in comments">
-                <!--                <img src="#" />-->
-                <p class="comment">{{comment.Text}}</p>
-                <p class="commentInfo">{{comment.Posted}}</p>
-            </li>
-            
-        </ul>
+   
+    <h4>Comments</h4>
+    <div id="cmntWrap" >
+        <div class="tagform" action="" method="get" accept-charset="utf-8">
+            <input type="text" placeholder="add a ccomment" id="new_post" ng-model="comment">
+            <input type="button" ng-click="postComment()" class="btn btn-small" value="Post"/>
+            <ul>
+                <li class="cf" ng-repeat="comment in comments">
+                    <!--                <img src="#" />-->
+                    <div class="comment">{{comment.Text}}</div>
+                    <div class="commentInfo muted"><small>{{comment.posted_date}}</small></div>
+                </li>
+
+            </ul>
+        </div>
     </div>
-    <form class="tagform" action="" method="get" accept-charset="utf-8">
-        <input type="text"  placeholder="add a ccomment" id="new_post" ng-model="comment" >
-        <input type="button" ng-click="postComment()" value="Post Comment" class="btn" />
-    </form>
+   
 </div>
