--- a/src/DryEraseWebsite/DryEraseWeb/plugin/views/main.html
+++ b/src/DryEraseWebsite/DryEraseWeb/plugin/views/main.html
@@ -2,8 +2,8 @@
     <h4>Share With</h4>
     <div class="tagWrap">
 
-        <input type="checkbox" disabled="disabled" align="middle"> Your Company (Coming Soon)</input><br/>
-        <input type="checkbox" disabled="disabled"> Your Team (Coming Soon)</input>
+        <input type="checkbox" disabled="disabled" align="middle" class="disabled"> Your Company (Coming Soon)</input><br/>
+        <input type="checkbox" disabled="disabled" class="disabled"> Your Team (Coming Soon)</input>
     </div>
     <h4>Tags</h4>
     <div class="tagWrap">
@@ -18,7 +18,7 @@
     </div>
    
     <h4>Comments</h4>
-    <div id="cmntWrap" >
+    <div class="tagWrap" >
         <div class="tagform" action="" method="get" accept-charset="utf-8">
             <input type="text" placeholder="add a ccomment" id="new_post" ng-model="comment">
             <input type="button" ng-click="postComment()" class="btn btn-small" value="Post"/>
