fix for comments

--- a/src/DryEraseWebsite/DryEraseWeb/plugin/views/main.html
+++ b/src/DryEraseWebsite/DryEraseWeb/plugin/views/main.html
@@ -13,7 +13,7 @@
             <input type="button" ng-click="addTag()" value="Add" class="btn btn-small">
         </form>
         <span ng-repeat="tag in tags">
-            <a href="#">{{tag.Text}}</a>&nbsp;
+            <a href="#" class="badge badge-info">{{tag.Text}}</a>&nbsp;
         </span>
     </div>
    
