fixes for plugin

--- a/src/DryEraseWebsite/DryEraseWeb/views/welcome.html
+++ b/src/DryEraseWebsite/DryEraseWeb/views/welcome.html
@@ -19,10 +19,13 @@
             <div class="offset3 span6 pull-left">
                 <div class="center lead" style="margin-top: 20px;">
                     <p>
-                        DryEraseWeb makes it easy for teams to collaborate on web content.
+                        Dry Erase Web is your digital Dashboard for the web. 
+                    </p>
+                    <p>
+                        We let tag and annotate the internet and share with colleagues and clients.
                     </p>
                 </div>
-                <a class="btn btn-large btn-primary" href="#/register">Try it!</a>
+                <a class="btn btn-large btn-primary" target="_top" href="https://chrome.google.com/webstore/detail/dry-erase-web/njlpfiijnimcdpecglmkeneckidiloap">Try it NOW!</a>
             </div>
 
         </div>
